--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,9 +1,11 @@
 $default-font: "Open Sans Regular", sans-serif
 
-$accent: #542749
+$accent: #cea11f
 $color: #542749
-$white: #fafafa
+$white: #fff
 $green: #66b045
+$blue: #426176
+$border: #d2cad5
 
 @mixin mt($time)
   transition: all $time ease
